# dragit

./: Cargo.toml  README.md  build.rs  com.sireliah.Dragit.metainfo.xml  com.sireliah.Dragit.yml  dragit.desktop  flake.nix
.github/workflows/: release.yml  rust.yml  test.yml  windows.yml
examples/: only_server.rs
scripts/: cargo_vendor.sh  package.sh  windows_deps.txt
src/: bluetooth.rs  consts.rs  dragit.rc  file.txt  lib.rs  main.rs  transfer.rs
src/bluetooth/: adapter.rs  mod.rs  obex.rs  transfer_states.rs
src/dnd/: components.rs  dialogs.rs  events.rs  mod.rs  notifications.rs
src/firewall/: mod.rs
src/p2p/: behaviour.rs  commands.rs  handler.rs  mod.rs  peer.rs  protocol.rs  util.rs
src/p2p/discovery/: behaviour.rs  handler.rs  host.proto  mod.rs  protocol.rs
src/p2p/transfer/: behaviour.rs  directory.rs  file.rs  jobs.rs  metadata.proto  metadata.rs  mod.rs  protocol.rs  reader.rs
src/user_data/: mod.rs
static/: README.md  com.sireliah.Dragit.yml
tests/: bench_transfer.rs  p2p.rs  test_directory.rs  test_file.rs  test_text.rs
tests/common/: mod.rs
tests/data/test_dir/: Der_Zauberberg.epub  test.odt
tests/data/test_dir/dir/: deleted_symlink_file
