[package]
name = "dragit"
version = "0.7.0"
authors = ["sireliah"]
edition = "2018"
build = "build.rs"

[dependencies]
async-std = { version = "1.11.0", features = [ "unstable", "tokio1", "attributes"] }
async_zip = "0.0.9"
bytesize = "1.0.0"
directories-next = "2.0.0"
futures = "0.3.5"
gdk = "0.15.4"
gio = "0.15.4"
glib = "0.15.4"
gtk = "0.15.4"
hex = "0.4.2"
hostname = "0.3.0"
libp2p = { version = "0.44.0", features = [ "dns-async-std", "websocket", "mplex", "mdns", "tcp-async-io", "noise" ], default-features = false }
log = "0.4.8"
env_logger = "0.9"
md-5 = "0.10.1"
pnet = "0.27.2"
prost = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
tokio = {version = "1.20.2", features = ["io-util", "macros"] }
tokio-util = {version = "0.7.3", features = ["compat"] }
toml = "0.5.7"
smallvec = "1.6.1"
walkdir = "2.3.2"

[build-dependencies]
prost-build = { version = "0.6.1" }

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.26.0"

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.4.3"
zbus = "1.9.1"
zvariant = "2.6.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3.0"
