[package]
name = "dragit"
version = "0.7.2"
authors = ["sireliah"]
edition = "2021"
build = "build.rs"

[dependencies]
async-std = { version = "1.11.0", features = [
    "unstable",
    "tokio1",
    "attributes",
] }
async_zip = "0.0.9"
bytesize = "1.0.0"
directories-next = "2.0.0"
futures = "0.3.5"
gdk = "0.15.4"
gio = "0.15.4"
glib = "0.15.4"
gtk = "0.15.4"
hex = "0.4.2"
hostname = "0.4.2"
libp2p = { version = "0.44.0", features = [
    "dns-async-std",
    "websocket",
    "mplex",
    "mdns",
    "tcp-async-io",
    "noise",
], default-features = false }
log = "0.4.8"
env_logger = "0.10.0"
md-5 = "0.10.1"
pnet = "0.35.0"
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
tokio = { version = "1.29.1", features = ["io-util", "macros"] }
tokio-util = { version = "0.7.3", features = ["compat"] }
toml = "1.0.3"
smallvec = "1.6.1"
walkdir = "2.3.2"
zeroize_derive = "1.1.1"
rand_core = "0.6.2"

[build-dependencies]
prost-build = { version = "0.6.1" }

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.35.0"

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.4.3"
zbus = "5.14.0"
zvariant = "5.10.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3.0"
windows = "0.32.0"
