[package]
name = "dragit"
version = "0.7.2"
authors = ["sireliah"]
edition = "2021"
build = "build.rs"

[dependencies]
async-channel = "2.3.1"
tokio-tar = "0.3"
bytesize = "2.3.1"
directories-next = "2.0.0"
futures = "0.3.5"
gdk = "0.15.4"
gio = "0.15.4"
glib = "0.15.4"
gtk = "0.15.4"
hex = "0.4.2"
hostname = "0.4.2"
libp2p = { version = "0.56.0", features = [
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "macros",
    "tokio",
], default-features = false }
log = "0.4.8"
env_logger = "0.11.9"
md-5 = "0.10.1"
pnet = "0.35.0"
prost = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "io-util", "macros", "fs", "sync", "time"] }
tokio-util = { version = "0.7.3", features = ["compat"] }
toml = "1.0.3"
smallvec = "1.6.1"

rand_core = "0.6.2"

[build-dependencies]
prost-build = { version = "0.14.3" }

[target.'cfg(unix)'.dependencies]
pnet_datalink = "0.35.0"

[target.'cfg(target_os = "linux")'.dependencies]
byteorder = "1.4.3"
zbus = "5.14.0"
zvariant = "5.10.0"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3.0"
windows = "0.32.0"
